--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -1,53 +1,57 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1 class="my-4">All tasks</h1>
+  <div class="row justify-content-center">
+    <div class="col-md-12 p-0">
+      <h1 class="my-4 text-center">All tasks</h1>
 
-  <table class="table table-hover">
-    <thead>
-    <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Type</th>
-      <th scope="col">Priority</th>
-      <th scope="col">Deadline</th>
-      <th scope="col">Assignees</th>
-      <th scope="col">Status</th>
-      <th scope="col">Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for task in task_list %}
-      <tr class="{% if task.is_completed %}table-success{% else %}table-active{% endif %}">
-        <td>{{ task.name }}</td>
-        <td>{{ task.task_type }}</td>
-        <td>
-          {% if task.priority == "low" %}
-            <span class="badge rounded-pill bg-primary">{{ task.priority }}</span>
-          {% elif task.priority == "medium" %}
-            <span class="badge rounded-pill bg-warning text-dark">{{ task.priority }}</span>
-          {% else %}
-            <span class="badge rounded-pill bg-danger">{{ task.priority }}</span>
-          {% endif %}
-        </td>
-        <td>{{ task.deadline }}</td>
-        <td>
-          {% for assignee in task.assignees.all %}
-            {{ assignee }}{% if not forloop.last %}, {% endif %}
-          {% endfor %}
-        </td>
-        <td>
-          {% if task.is_completed %}
-            <span class="badge badge-success">Completed</span>
-          {% else %}
-            <span class="badge badge-secondary">Pending</span>
-          {% endif %}
-        </td>
-        <td>
-          <a href="#" class="btn btn-sm btn-primary">View</a>
-          <a href="#" class="btn btn-sm btn-secondary">Edit</a>
-          <a href="#" class="btn btn-sm btn-danger">Delete</a>
-        </td>
-      </tr>
-    {% endfor %}
-    </tbody>
-  </table>
+      <table class="table table-hover">
+        <thead>
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Type</th>
+          <th scope="col">Priority</th>
+          <th scope="col">Deadline</th>
+          <th scope="col">Assignees</th>
+          <th scope="col">Status</th>
+          <th scope="col">Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for task in task_list %}
+          <tr class="{% if task.is_completed %}table-success{% else %}table-active{% endif %}">
+            <td>{{ task.name }}</td>
+            <td>{{ task.task_type }}</td>
+            <td>
+              {% if task.priority == "low" %}
+                <span class="badge rounded-pill bg-primary">{{ task.priority }}</span>
+              {% elif task.priority == "medium" %}
+                <span class="badge rounded-pill bg-warning text-dark">{{ task.priority }}</span>
+              {% else %}
+                <span class="badge rounded-pill bg-danger">{{ task.priority }}</span>
+              {% endif %}
+            </td>
+            <td>{{ task.deadline }}</td>
+            <td>
+              {% for assignee in task.assignees.all %}
+                {{ assignee }}{% if not forloop.last %}, {% endif %}
+              {% endfor %}
+            </td>
+            <td>
+              {% if task.is_completed %}
+                <span class="badge badge-success">Completed</span>
+              {% else %}
+                <span class="badge badge-secondary">Pending</span>
+              {% endif %}
+            </td>
+            <td>
+              <a href="#" class="btn btn-sm btn-primary">View</a>
+              <a href="#" class="btn btn-sm btn-secondary">Edit</a>
+              <a href="#" class="btn btn-sm btn-danger">Delete</a>
+            </td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
 {% endblock %}
