--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -6,7 +6,7 @@
 
     <div class="row">
       {% for task in task_list %}
-        <div class="col-md-6">
+        <div class="col-md-6 col-lg-4">
           <div class="card mb-3">
             <div class="card-body">
               <h4 class="card-title">{{ task.name }}</h4>
@@ -26,7 +26,7 @@
                   <strong>Assignees:</strong>
                   {% for assignee in task.assignees.all %}
                     {{ assignee.get_full_name }}
-                    {% if not forloop.last %},{% endif %}
+                    {% if not forloop.last %}, {% endif %}
                   {% endfor %}
                 </li>
               </ul>
@@ -46,12 +46,15 @@
             </div>
           </div>
         </div>
-        {% if forloop.counter|divisibleby:2 %}
+        {% if forloop.counter|divisibleby:3 %}
           </div>
           <div class="row">
         {% endif %}
+      {% empty %}
+        <div class="col-12">
+          <p class="text-center">There is no tasks yet.</p>
+        </div>
       {% endfor %}
-
       </div>
     {% include "includes/pagination.html" %}
   </div>
