--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -1,25 +1,35 @@
 {% if is_paginated %}
-  <ul class="pagination">
-    {% if page_obj.has_previous %}
-      <li class="page-item">
-        <a href="?page= {{ page_obj.previous_page_number }}" class="page-link">&laquo;</a>
+  <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+      {% if page_obj.has_previous %}
+        <li class="page-item">
+          <a class="page-link text-dark bg-light border-secondary" href="?page={{ page_obj.previous_page_number }}"
+             aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+      {% else %}
+        <li class="page-item disabled">
+          <a class="page-link" href="#" tabindex="-1" aria-disabled="true">&laquo;</a>
+        </li>
+      {% endif %}
+
+      <li class="page-item active" aria-current="page">
+        <span class="page-link text-white border-secondary bg-secondary">{{ page_obj.number }} of {{ paginator.num_pages }}</span>
       </li>
-    {% else %}
-      <li class="page-item disabled">
-        <a href="#" class="page-link">&laquo;</a>
-      </li>
-    {% endif %}
-    <li class="page-item">
-      <span class="page-link">{{ page_obj.number }} of {{ paginator.num_pages }}</span>
-    </li>
-    {% if page_obj.has_next %}
-      <li class="page-item">
-        <a href="?page= {{ page_obj.next_page_number }}" class="page-link">&raquo;</a>
-      </li>
-    {% else %}
-      <li class="page-item disabled">
-        <a href="#" class="page-link">&raquo;</a>
-      </li>
-    {% endif %}
-  </ul>
+
+      {% if page_obj.has_next %}
+        <li class="page-item">
+          <a class="page-link text-dark bg-light border-secondary" href="?page={{ page_obj.next_page_number }}"
+             aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      {% else %}
+        <li class="page-item disabled">
+          <a class="page-link" href="#" aria-disabled="true">&raquo;</a>
+        </li>
+      {% endif %}
+    </ul>
+  </nav>
 {% endif %}
