--- a/templates/includes/navigration.html
+++ b/templates/includes/navigration.html
@@ -22,6 +22,9 @@
     {% if user.is_authenticated %}
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
+          <div class="nav-item">{% include "includes/search.html" %}</div>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">{{ user.get_username }}</a>
         </li>
         <li class="nav-item">
