--- a/templates/includes/navigration.html
+++ b/templates/includes/navigration.html
@@ -13,19 +13,19 @@
         <a class="nav-link" href="{% url 'tasks:task-list' %}">All tasks</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'tasks:user-task-list' %}">My tasks</a>
+        <a class="nav-link" href="{% url 'tasks:user-task-list' %}">Your tasks</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'tasks:task-create' %}">Add task</a>
+      </li>
+      <li class="nav-item">
+        <div class="nav-item">{% include "includes/search.html" %}</div>
       </li>
     </ul>
     {% if user.is_authenticated %}
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <div class="nav-item">{% include "includes/search.html" %}</div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">{{ user.get_username }}</a>
+          <a class="nav-link" href="{% url 'tasks:user-detail' user.id %}">{{ user.get_username }}</a>
         </li>
         <li class="nav-item">
           <form method="post" action="{% url 'logout' %}?next={{ request.path }}">
