change border raius of input and button of search

--- a/templates/includes/search.html
+++ b/templates/includes/search.html
@@ -1,4 +1,4 @@
 <form method="get" action="{% url 'tasks:task-list' %}" class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" name="name" placeholder="Search task ny name" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    <input class="form-control mr-sm-2 br-2 rounded-pill" type="search" name="name" placeholder="Search task ny name" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0 rounded-pill" type="submit">Search</button>
 </form>
