make all buttons rounded-pill

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -24,7 +24,7 @@
               <input type="password" name="password" id="id_password" class="form-control" required>
             </div>
             <div class="d-grid text-center">
-              <button type="submit" class="btn btn-outline-secondary pr-3 pl-3">Login</button>
+              <button type="submit" class="btn btn-outline-secondary pr-3 pl-3 rounded-pill">Login</button>
             </div>
           </form>
         </div>
