--- a/templates/tasks/task_detail.html
+++ b/templates/tasks/task_detail.html
@@ -37,8 +37,8 @@
         </div>
       </div>
       <div class="card-footer text-muted text-center">
-        <a href="{% url 'tasks:task-update' task.id %}" class="btn btn-secondary">Edit</a>
-        <a href="{% url 'tasks:task-delete' task.id %}" class="btn btn-danger">Delete</a>
+        <a href="{% url 'tasks:task-update' task.id %}" class="btn btn-secondary rounded-pill">Edit</a>
+        <a href="{% url 'tasks:task-delete' task.id %}" class="btn btn-danger rounded-pill">Delete</a>
       </div>
     </div>
   </div>
