--- a/templates/registration/worker_registration.html
+++ b/templates/registration/worker_registration.html
@@ -13,7 +13,7 @@
             {% csrf_token %}
             {{ form|crispy }}
             <div class="d-grid text-center">
-              <button type="submit" class="btn btn-outline-success pr-3 pl-3">Register</button>
+              <button type="submit" class="btn btn-outline-success pr-3 pl-3 rounded-pill">Register</button>
             </div>
           </form>
         </div>
