--- a/templates/tasks/user_task_list.html
+++ b/templates/tasks/user_task_list.html
@@ -16,7 +16,7 @@
                   {% if task.priority == "low" %}
                     <span class="badge rounded-pill bg-primary">{{ task.priority }}</span>
                   {% elif task.priority == "medium" %}
-                    <span class="badge rounded-pill bg-warning text-dark">{{ task.priority }}</span>
+                    <span class="badge rounded-pill bg-warning">{{ task.priority }}</span>
                   {% else %}
                     <span class="badge rounded-pill bg-danger">{{ task.priority }}</span>
                   {% endif %}
@@ -38,9 +38,9 @@
               </div>
             </div>
             <div class="card-footer text-muted text-center">
-              <a href="{% url 'tasks:task-detail' task.id %}" class="btn btn-primary">View</a>
-              <a href="{% url 'tasks:task-update' task.id %}" class="btn btn-secondary">Edit</a>
-              <a href="{% url 'tasks:task-delete' task.id %}" class="btn btn-danger">Delete</a>
+              <a href="{% url 'tasks:task-detail' task.id %}" class="btn btn-primary rounded-pill">View</a>
+              <a href="{% url 'tasks:task-update' task.id %}" class="btn btn-secondary rounded-pill">Edit</a>
+              <a href="{% url 'tasks:task-delete' task.id %}" class="btn btn-danger rounded-pill">Delete</a>
             </div>
           </div>
         </div>
