add titles for all pages

--- a/templates/tasks/task_form.html
+++ b/templates/tasks/task_form.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load crispy_forms_filters %}
 
+{% block title %}
+<title>Create task</title>
+{% endblock %}
+
 {% block content %}
   <div class="row justify-content-center">
     <div class="col-md-4 ">
