--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+<title>Tasks</title>
+{% endblock %}
+
 {% block content %}
   <div class="container mt-5">
     <h2 class="text-center mb-4">All Tasks</h2>
