--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+<title>Login</title>
+{% endblock %}
+
 {% block content %}
   <div class="row justify-content-center">
     <div class="col-md-4 ">
