--- a/templates/registration/worker_registration.html
+++ b/templates/registration/worker_registration.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load crispy_forms_filters %}
 
+{% block title %}
+<title>Registration</title>
+{% endblock %}
+
 {% block content %}
   <div class="row justify-content-center">
     <div class="col-md-4 ">
