--- a/templates/tasks/task_detail.html
+++ b/templates/tasks/task_detail.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+<title>Task view</title>
+{% endblock %}
+
 {% block content %}
   <div class="container mt-5">
     <div class="card">
