--- a/templates/tasks/user_task_list.html
+++ b/templates/tasks/user_task_list.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+  <title>My tasks</title>
+{% endblock %}
+
 {% block content %}
   <div class="container mt-5">
     <h2 class="text-center mb-4">My Tasks</h2>
