--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
         crossorigin="anonymous">
   <!-- Add additional CSS in static file -->
   {% load static %}
+  <link rel="icon" href="{% static 'img/list-task.svg' %}">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
