--- a/templates/tasks/worker_form.html
+++ b/templates/tasks/worker_form.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_filters %}
 
 {% block title %}
-<title>Registration</title>
+<title>{% if registration %}Registration{% else %}Update Profile{% endif %}</title>
 {% endblock %}
 
 {% block content %}
@@ -10,20 +10,22 @@
     <div class="col-md-4 ">
       <div class="card">
         <div class="card-header text-center bg-dark text-light">
-          <h3>Worker Registration - Task Manager</h3>
+          <h3>{% if registration %}Worker Registration{% else %}Update Profile{% endif %}</h3>
         </div>
         <div class="card-body">
           <form method="post">
             {% csrf_token %}
             {{ form|crispy }}
             <div class="d-grid text-center">
-              <button type="submit" class="btn btn-outline-success pr-3 pl-3 rounded-pill">Register</button>
+              <button type="submit" class="btn btn-outline-success pr-3 pl-3 rounded-pill">{% if registration %}Register{% else %}Update{% endif %}</button>
             </div>
           </form>
         </div>
+        {% if registration %}
         <div class="card-footer text-center">
           <p class="mb-0">Already have an account? <a href="{% url 'login' %}">Login here</a></p>
         </div>
+        {% endif %}
       </div>
     </div>
   </div>
