--- a/templates/tasks/worker_form.html
+++ b/templates/tasks/worker_form.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_filters %}
 
 {% block title %}
-<title>{% if registration %}Registration{% else %}Update Profile{% endif %}</title>
+<title>{% if user.is_authenticated %}Update Profile{% else %}Registration{% endif %}</title>
 {% endblock %}
 
 {% block content %}
@@ -10,7 +10,7 @@
     <div class="col-md-4 ">
       <div class="card">
         <div class="card-header text-center bg-dark text-light">
-          <h3>{% if registration %}Worker Registration{% else %}Update Profile{% endif %}</h3>
+          <h3>{% if user.is_authenticated %}Update Profile{% else %}Worker Registration{% endif %}</h3>
         </div>
         <div class="card-body">
           <form method="post">
@@ -21,7 +21,7 @@
             </div>
           </form>
         </div>
-        {% if registration %}
+        {% if not user.is_authenticated %}
         <div class="card-footer text-center">
           <p class="mb-0">Already have an account? <a href="{% url 'login' %}">Login here</a></p>
         </div>
