--- a/templates/tasks/task_detail.html
+++ b/templates/tasks/task_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-<title>Task view</title>
+  <title>Task view</title>
 {% endblock %}
 
 {% block content %}
@@ -33,10 +33,22 @@
         </ul>
         <div class="mt-3">
           <strong>Status:</strong>
-          {% if task.is_completed %}
-            <span class="badge badge-success">Completed</span>
-          {% else %}
-            <span class="badge badge-secondary">Pending</span>
+          {% if task.status == "to_do" %}
+            <span class="badge text-light" style="background-color: #c926c9">
+              To Do
+            </span>
+          {% elif task.status == "in_progress" %}
+            <span class="badge text-light" style="background-color: #ffa600">
+              In Progress
+            </span>
+          {% elif task.status == "reviewing" %}
+            <span class="badge badge-info">
+              Reviewing
+            </span>
+          {% elif task.status == "completed" %}
+            <span class="badge badge-success">
+              Completed
+            </span>
           {% endif %}
         </div>
       </div>
