--- a/templates/includes/navigration.html
+++ b/templates/includes/navigration.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Task Manager</a>
+  <a class="navbar-brand" href="{% url 'tasks:home' %}">Task Manager</a>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="{% url 'tasks:home' %}">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'tasks:task-list' %}">All tasks</a>
