fixed status and priority badges on task detail page

--- a/templates/tasks/task_detail.html
+++ b/templates/tasks/task_detail.html
@@ -15,11 +15,14 @@
           <li class="list-group-item">
             <strong>Priority:</strong>
             {% if task.priority == "low" %}
-              <span class="badge rounded-pill bg-primary">{{ task.priority }}</span>
+              <span class="badge rounded-pill text-dark"
+                    style="background-color: #7bb9ff">{{ task.priority }}</span>
             {% elif task.priority == "medium" %}
-              <span class="badge rounded-pill bg-warning text-dark">{{ task.priority }}</span>
+              <span class="badge rounded-pill text-dark"
+                    style="background-color: #faba50">{{ task.priority }}</span>
             {% else %}
-              <span class="badge rounded-pill bg-danger">{{ task.priority }}</span>
+              <span class="badge rounded-pill text-dark"
+                    style="background-color: #fa6b6b">{{ task.priority }}</span>
             {% endif %}
           </li>
           <li class="list-group-item"><strong>Type:</strong> {{ task.task_type.name }}</li>
@@ -34,19 +37,19 @@
         <div class="mt-3">
           <strong>Status:</strong>
           {% if task.status == "to_do" %}
-            <span class="badge text-light" style="background-color: #c926c9">
+            <span class="badge text-light rounded-pill" style="background-color: #7d73d0">
               To Do
             </span>
           {% elif task.status == "in_progress" %}
-            <span class="badge text-light" style="background-color: #ffa600">
+            <span class="badge text-light rounded-pill" style="background-color: #7696d9">
               In Progress
             </span>
           {% elif task.status == "reviewing" %}
-            <span class="badge badge-info">
+            <span class="badge text-light rounded-pill" style="background-color: #5eb4c2">
               Reviewing
             </span>
           {% elif task.status == "completed" %}
-            <span class="badge badge-success">
+            <span class="badge text-light rounded-pill" style="background-color: #5ab090">
               Completed
             </span>
           {% endif %}
