--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -1,26 +1,26 @@
 {% extends "base.html" %}
 
 {% block title %}
-<title>{% if only_current_user %}Your{% else %}All{% endif %} Tasks</title>
+  <title>{% if only_current_user %}Your{% else %}All{% endif %} Tasks</title>
 {% endblock %}
 
 {% block content %}
-<div class="container col-sm-8 mb-3">
-  <div class="card">
-    <div class="card-header bg-dark text-light">
-      <h2 class="text-center mb-0">{% if only_current_user %}Your{% else %}All{% endif %} Tasks</h2>
-    </div>
-    <div class="card-body">
-      <div class="row">
-        {% for status, color, title in statuses %}
-          <div class="col-md-3 {% if not forloop.last %}border-right{% endif %}" style="border-color: #dee2e6;">
-            <h4 class="text-center">
-              <span class="badge text-light rounded-pill" style="background-color: {{ color }}">{{ title }}</span>
-            </h4>
-            {% for task in task_list %}
-              {% if task.status == status %}
-                <div class="card mb-3">
-                  <div class="card-body">
+  <div class="container col-sm-8 mb-3">
+    <div class="card">
+      <div class="card-header bg-dark text-light">
+        <h2 class="text-center mb-0">{% if only_current_user %}Your{% else %}All{% endif %} Tasks</h2>
+      </div>
+      <div class="card-body">
+        <div class="row">
+          {% for status, color, title in statuses %}
+            <div class="col-md-3 {% if not forloop.last %}border-right{% endif %}" style="border-color: #dee2e6;">
+              <h4 class="text-center">
+                <span class="badge text-light rounded-pill" style="background-color: {{ color }}">{{ title }}</span>
+              </h4>
+              {% for task in task_list %}
+                {% if task.status == status %}
+                  <div class="card mb-3">
+                    <div class="card-body">
                       <h5 class="card-title">{{ task.name }}</h5>
                       <ul class="list-group list-group-flush">
                         <li class="list-group-item"><strong>Deadline:</strong> {{ task.deadline|date:"d.m.Y" }}</li>
@@ -48,21 +48,24 @@
                         </li>
                       </ul>
                       <div class="card-footer text-muted text-center">
-                        <a href="{% url 'tasks:task-detail' task.id %}" class="btn btn-primary rounded-pill">View</a>
-                        <a href="{% url 'tasks:task-update' task.id %}" class="btn btn-secondary rounded-pill">Edit</a>
-                        <a href="{% url 'tasks:task-delete' task.id %}" class="btn btn-danger rounded-pill">Delete</a>
+                        <a href="{% url 'tasks:task-detail' task.id %}"
+                           class="btn btn-sm btn-primary rounded-pill">View</a>
+                        <a href="{% url 'tasks:task-update' task.id %}" class="btn btn-sm btn-secondary rounded-pill">Edit</a>
+                        <a href="{% url 'tasks:task-delete' task.id %}" class="btn btn-sm btn-danger rounded-pill">Delete</a>
                       </div>
+                    </div>
                   </div>
+                {% endif %}
+              {% empty %}
+                <div class="alert alert-info text-center" role="alert">
+                  No tasks in "{{ title }}" yet.
                 </div>
-              {% endif %}
-            {% empty %}
-              <p class="text-center">No tasks in "{{ title }}" yet.</p>
-            {% endfor %}
-          </div>
-        {% endfor %}
+              {% endfor %}
+            </div>
+          {% endfor %}
+        </div>
       </div>
+      {% include "includes/pagination.html" %}
     </div>
-    {% include "includes/pagination.html" %}
   </div>
-</div>
 {% endblock %}
