--- a/templates/tasks/worker_form.html
+++ b/templates/tasks/worker_form.html
@@ -17,7 +17,7 @@
             {% csrf_token %}
             {{ form|crispy }}
             <div class="d-grid text-center">
-              <button type="submit" class="btn btn-outline-success pr-3 pl-3 rounded-pill">{% if registration %}Register{% else %}Update{% endif %}</button>
+              <button type="submit" class="btn btn-outline-success pr-3 pl-3 rounded-pill">{% if user.is_authenticated %}Update{% else %}Register{% endif %}</button>
             </div>
           </form>
         </div>
