--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -1,9 +1,10 @@
 {% if is_paginated %}
+  {% load query_transform %}
   <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center">
       {% if page_obj.has_previous %}
         <li class="page-item">
-          <a class="page-link text-dark bg-light border-secondary" href="?page={{ page_obj.previous_page_number }}"
+          <a class="page-link text-dark bg-light border-secondary" href="?{% query_transform request page=page_obj.previous_page_number %}"
              aria-label="Previous">
             <span aria-hidden="true">&laquo;</span>
           </a>
@@ -20,7 +21,7 @@
 
       {% if page_obj.has_next %}
         <li class="page-item">
-          <a class="page-link text-dark bg-light border-secondary" href="?page={{ page_obj.next_page_number }}"
+          <a class="page-link text-dark bg-light border-secondary" href="?{% query_transform request page=page_obj.next_page_number %}"
              aria-label="Next">
             <span aria-hidden="true">&raquo;</span>
           </a>
