--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -3,5 +3,5 @@
 {% block content %}
 <p>Logged out!</p>
 
-<a href="{% url 'login' %}">Click here to login again.</a>
+<a href="{% url 'tasks:login' %}">Click here to login again.</a>
 {% endblock %}
