--- a/templates/tasks/worker_form.html
+++ b/templates/tasks/worker_form.html
@@ -23,7 +23,7 @@
         </div>
         {% if not user.is_authenticated %}
         <div class="card-footer text-center">
-          <p class="mb-0">Already have an account? <a href="{% url 'login' %}">Login here</a></p>
+          <p class="mb-0">Already have an account? <a href="{% url 'tasks:login' %}">Login here</a></p>
         </div>
         {% endif %}
       </div>
