--- a/templates/tasks/home.html
+++ b/templates/tasks/home.html
@@ -61,7 +61,7 @@
             <span class="badge rounded-pill text-light" style="background-color: #faba50">
               Medium
               <span class="badge rounded-pill" style="background-color: #ce8f1b">
-                {% if not tasks_priority_count.Medium %}0{% else %}
+                {% if not tasks_priority_count.medium %}0{% else %}
                   {{ tasks_priority_count.medium }}
                 {% endif %}
               </span>
